# synth-data-bench-training

./: ENERGON_DOCS.md  README.md  project.md  pyproject.toml
configs/: cap_pretrain.toml  dataset_standard.toml  dataset_varying.toml  interleaved.toml  vqa.toml
src/: add_sample_loader.py  generate.py  task_encoders.py  viz_synthetic.py  viz_text.py
